--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "passport-http-bearer": "~1.0.1",
     "connect": "~2.12.0",
+    "request": "~2.31.0",
     "connect_router": "~1.8.7",
     "passport": "~0.1.17",
     "passport-oauth": "~1.0.0"
